crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/multiple_visibility_specifiers/free_functions/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 2

Error: Function must have explicit visibility (public, internal, external, or private).
   ╭─[input.sol:1:1]
   │
 1 │ function missing() {}
   │ ──────────┬──────────  
   │           ╰──────────── Error occurred here.
───╯

Error: Only a single visibility specifier can be provided.
   ╭─[input.sol:3:29]
   │
 3 │ function duplicate() public private {}
   │                             ───┬───  
   │                                ╰───── Error occurred here.
───╯
